--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.25.5",
+    "sequelize-cli": "^6.5.2",
     "ts-node-dev": "^2.0.0"
   }
 }
