--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "/bin/sh tsc_eval.sh",
+    "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
+    "predev": "npm run build && npm run db:reset",
+    "go": "nodemon --watch \"./src/**\" ./src/server.ts",
     "dev": "tsnd src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,21 +15,28 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/sequelize": "^4.28.14",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "eslint": "^8.27.0",
+    "nodemon": "^2.0.20",
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@types/node": "^18.11.9",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.5",
     "sequelize-cli": "^6.5.2",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0"
   }
 }
