--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "express-async-errors": "^3.1.1",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.5",
